exercises/6-Security/1-relax_mTLS.yaml
# Log onto test pod in namespace test
# $curl http://curl web-tier-svc.web-tier, Response 200 means success 
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "relax-mtls"
  namespace: "web-tier"
spec:
  selector:
    matchLabels:
      app: web-tier
  mtls:
    mode: PERMISSIVE
## MODES --> STRICT, PERMISSIVE, DISABLE
